onprem/infra/sonarqube/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube-pod
  ports:
    - name: sonarqube
      port: 9000
      targetPort: 9000
