onprem/infra/sonarqube/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  tls:
   - hosts:
       - sonarqube.apjung.me
     secretName: tls-secret
  rules:
  - host: sonarqube.apjung.me
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarqube-service
          servicePort: 9000
